<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="Application Settings"
		android:enabled="true" android:key="applicationSettings">
		<CheckBoxPreference android:title="@string/preferences_title_autostart"
			android:summary="@string/preferences_summary_autostart"
			android:defaultValue="false" android:key="autostartPreferences" />
		<CheckBoxPreference android:title="@string/preferences_title_autoconnect"
			android:summary="@string/preferences_summary_autoconnect"
			android:defaultValue="false" android:key="autoconnectPreferences" />
		<CheckBoxPreference android:title="@string/preferences_title_autoupdate"
			android:summary="@string/preferences_summary_autoupdate"
			android:defaultValue="true" android:key="autoUpdate" />
		<CheckBoxPreference android:title="@string/preferences_title_nonconformdata"
			android:summary="@string/preferences_summary_nonconformdata"
			android:defaultValue="true" android:key="nonConformDataPreferences" />
		<CheckBoxPreference android:title="@string/preferences_title_sendesukomspecificapps"
			android:summary="@string/preferences_summary_sendesukomspecificapps"
			android:defaultValue="false" android:key="sendNoAppsPreferences" />
		<CheckBoxPreference android:title="@string/preferences_title_dontsendgoogleapps"
			android:summary="@string/preferences_summary_dontsendgoogleapps"
			android:defaultValue="true" android:key="sendNoGoogleAppsPreferences" />		
		<EditTextPreference android:name="Update Interval"
			android:summary="@string/preferences_summary_updateinterval"
			android:defaultValue="60000" android:title="@string/preferences_title_updateinterval"
			android:key="updateInterval" />
		
	</PreferenceCategory>
	
	<PreferenceCategory android:title="Server Settings"
		android:enabled="true" android:key="serverSettings">
		<ListPreference android:title="@string/preferences_title_serverPref"
			android:summary="@string/preferences_summary_serverForm"
			android:key="serverPref" android:entries="@array/preferences_display_serverForm"
			android:entryValues="@array/preferences_value_serverForm"
			android:defaultValue="IF-MAP" />
		<EditTextPreference android:name="Server IP-Address"
			android:summary="@string/preferences_summary_serverip"
			android:defaultValue="127.0.0.1" android:title="@string/preferences_title_serverip"
			android:key="serveripPreference" />
		<EditTextPreference android:name="EditText Preference"
			android:summary="@string/preferences_summary_serverport"
			android:defaultValue="8443" android:title="@string/preferences_title_serverport"
			android:key="serverportPreference" />
		
	</PreferenceCategory>
	
	<PreferenceCategory android:enabled="true"
		android:title="iMonitor-Encryption" android:key="imonitorSettings">
		<EditTextPreference android:name="Password"
			android:summary="@string/preferences_summary_imonitorpassword"
			android:defaultValue="icinga" android:title="@string/preferences_title_password"
			android:inputType="textPassword"
			android:key="nscaPassPreference" />
		<ListPreference android:title="@string/preferences_title_cryptPref"
			android:summary="@string/preferences_summary_cryptPref"
			android:key="nscaEncPref" android:entries="@array/preferences_display_cryptForm"
			android:entryValues="@array/preferences_value_cryptForm"
			android:defaultValue="1" />
	</PreferenceCategory>

	<PreferenceCategory android:enabled="true"
		android:title="Basic-Authentication" android:key="userSettings">
			<CheckBoxPreference android:title="@string/preferences_title_basicauth"
			android:defaultValue="true" android:summary="@string/preferences_summary_basicauth"
			android:key="basicAuth" />
		<EditTextPreference android:name="Username"
			android:summary="@string/preferences_summary_username"
			android:defaultValue="user" android:title="@string/preferences_title_username"
			android:key="usernamePreference" />
		<EditTextPreference android:name="Password"
			android:summary="@string/preferences_summary_password"
			android:defaultValue="pass" android:title="@string/preferences_title_password"
			android:inputType="textPassword"
			android:key="passwordPreference" />
	</PreferenceCategory>
	
	<PreferenceCategory android:title="Connection Settings"
		android:enabled="true" android:key="connectionSettings">
		<CheckBoxPreference android:title="@string/preferences_title_permanentlyConnection"
			android:summary="@string/preferences_summary_permanentlyConnection"
			android:defaultValue="true" android:key="permanantlyConectionPreferences" />
		<EditTextPreference android:name="RenewInterval"
			android:summary="@string/preferences_title_renewinterval"
			android:defaultValue="12000" android:title="@string/preferences_title_renewinterval"
			android:key="renewInterval" />

		<CheckBoxPreference android:title="@string/preferences_title_allowunsafe"
			android:defaultValue="true" android:summary="@string/preferences_summary_allowunsafe"
			android:key="allowUnsafeSSLPreference" />


	</PreferenceCategory>
	<PreferenceCategory android:title="Location-Tracking Settings"
		android:enabled="true" android:key="locationSettings">
		<CheckBoxPreference android:title="@string/preferences_title_locationTracking"
			android:defaultValue="false" android:summary="@string/preferences_summary_locationTracking"
			android:key="enableLocationTracking" />
		<ListPreference android:title="@string/preferences_title_locationPref"
			android:summary="@string/preferences_summary_locationForm"
			android:key="locationPref" android:entries="@array/preferences_display_locationForm"
			android:entryValues="@array/preferences_value_locationForm"
			android:defaultValue="1" />	
	</PreferenceCategory>

	<PreferenceCategory android:title="Application Logging"
		android:enabled="true">
		<CheckBoxPreference android:title="@string/preferences_title_applicationlogging"
			android:defaultValue="false"
			android:summary="@string/preferences_summary_applicationlogging"
			android:key="applicatiologging" />
	</PreferenceCategory>

	<PreferenceCategory android:title="Logging Settings"
		android:enabled="true">
			<CheckBoxPreference android:title="@string/preferences_title_lognewsessionrequest"
			android:defaultValue="true" android:summary="@string/preferences_summary_lognewsessionrequest"
			android:key="logNewsessionRequest" />
			
			<!--  
			<CheckBoxPreference android:title="@string/preferences_title_logpollrequest"
			android:defaultValue="true" android:summary="@string/preferences_summary_logpollrequest"
			android:key="logPollRequest" />-->
			
			<!--  
			<CheckBoxPreference android:title="@string/preferences_title_logsubscripe"
			android:defaultValue="true" android:summary="@string/preferences_summary_logsubscribe"
			android:key="logSubscripeRequest" />-->
			
			<CheckBoxPreference android:title="@string/preferences_title_logrenewrequest"
			android:defaultValue="false" android:summary="@string/preferences_summary_logrenewrequest"
			android:key="logRenewRequest" />
			
			<!--  CheckBoxPreference android:title="@string/preferences_title_logsearch"
			android:defaultValue="true" android:summary="@string/preferences_summary_logsearch"
			android:key="logSearch" /-->
			
			<CheckBoxPreference android:title="@string/preferences_title_loglocationtracking"
			android:defaultValue="true" android:summary="@string/preferences_summary_loglocationtracking"
			android:key="logLocationTracking" />
			
			<!-- CheckBoxPreference android:title="@string/preferences_title_logdeletelocation"
			android:defaultValue="true" android:summary="@string/preferences_summary_logdeletelocation"
			android:key="logDeleteLocation" /-->
			
			<CheckBoxPreference android:title="@string/preferences_title_logpublishcharacteristics"
			android:defaultValue="true" android:summary="@string/preferences_summary_logpublishcharacteristics"
			android:key="logPublishCharacteristics" />
			
			<CheckBoxPreference android:title="@string/preferences_title_logerrormessage"
			android:defaultValue="true" android:summary="@string/preferences_summary_logerrormessage"
			android:key="logErrorMessage" />
			
			<CheckBoxPreference android:title="@string/preferences_title_loginvalidresponse"
			android:defaultValue="true" android:summary="@string/preferences_summary_loginvalidresponse"
			android:key="logInvalideResponse" />
	</PreferenceCategory>

	<!-- Test-Service not used a.t.m. -->
	<!-- PreferenceCategory android:title="EnduranceTest Settings" android:enabled="true"> 
		<EditTextPreference android:summary="@string/preferences_summary_testcount" 
		android:defaultValue="10" android:title="@string/preferences_title_testcount" 
		android:key="testCount" android:name="Message to send"/> </PreferenceCategory -->
</PreferenceScreen>
